--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h2>National Engineering College</h2>
         <h3>Kovilpatti,TamilNadu</h3>
+        <h3>Koomapatti,TamilNadu</h3>
     </body>
 </html>
